feat: VLCJ player added